--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.2",
     "chart.js": "^4.4.0",
-    "country-data": "^0.0.31",
     "react": "^18.2.0",
+    "react-accessible-accordion": "^5.0.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.12.0",
-    "react-scripts": "^3.0.1",
-    "styled-components": "^6.1.1",
-    "swiper": "^11.0.4",
+    "react-scripts": "5.0.1",
+    "react-select-async-paginate": "^0.7.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
